# secure-mobile-os

./: README.md
apps/dialer/: Cargo.toml
apps/dialer/src/: call_history.rs  call_manager.rs  conference_calls.rs  contacts.rs  emergency.rs  keypad.rs  main.rs  spam_filter.rs  voicemail.rs
apps/file_manager/: Cargo.toml
apps/file_manager/src/: archive_manager.rs  bookmarks.rs  browser.rs  cloud_sync.rs  encryption.rs  main.rs  permissions.rs  search.rs  transfer.rs  trash.rs
apps/messaging/: Cargo.toml
apps/messaging/src/: attachments.rs  contacts.rs  encryption.rs  group_chat.rs  main.rs  mms.rs  notifications.rs  overlay_transport.rs  secure_chat.rs  sms.rs
apps/security_dashboard/: Cargo.toml
apps/security_dashboard/src/: audit_logs.rs  certificates.rs  firewall.rs  intrusion_detection.rs  main.rs  overlay_network.rs  permissions.rs  secure_boot.rs  system_integrity.rs  telemetry.rs  threat_monitor.rs  updates.rs  vpn.rs
apps/settings/: Cargo.toml
apps/settings/src/: accessibility.rs  accounts.rs  developer_options.rs  diagnostics.rs  display.rs  ipv4_settings.rs  ipv6_settings.rs  main.rs  network.rs  overlay_network.rs  privacy.rs  security.rs  storage.rs  telemetry_settings.rs  updates.rs  vpn_settings.rs
apps/system_ui/: Cargo.toml
apps/system_ui/src/: app_switcher.rs  home_screen.rs  launcher.rs  lock_screen.rs  notification_center.rs  quick_settings.rs  status_bar.rs  theme_manager.rs  wallpaper.rs  widgets.rs
frameworks/app_runtime/: lifecycle.rs  permissions_api.rs  sandbox_vm.rs
frameworks/plugin_system/: loader.rs  sandbox_plugins.rs  verifier.rs
frameworks/system_api/: network_api.rs  security_api.rs  storage_api.rs
frameworks/ui_framework/: compositor.rs  gesture_engine.rs  rendering_pipeline.rs  window_manager.rs
hardware_abstraction/: camera_hal.rs  encryption_acceleration.rs  hal_core.rs  modem_hal.rs  sensor_hal.rs
kernel/core/: main.rs  memory.rs  process.rs  scheduler.rs  syscall.rs
kernel/drivers/: gpu_driver.rs  input_driver.rs  modem_driver.rs  network_driver.rs  storage_driver.rs
kernel/ipc/: channels.rs  message_bus.rs  permissions.rs
kernel/security/: audit_log.rs  capabilities.rs  mac_policy.rs  sandbox.rs  verified_boot.rs
networking/stack/: unified_socket.rs
networking/stack/dns/: resolver.rs  secure_dns.rs
networking/stack/firewall/: intrusion_detection.rs  packet_filter.rs  policy_engine.rs
networking/stack/firewall/vpn/: tunnel_manager.rs
networking/stack/ipv4/: mod.rs
networking/stack/ipv6/: mod.rs
networking/stack/secure_overlay/: encryption.rs  key_exchange.rs  mod.rs  relay_nodes.rs  routing.rs
networking/stack/vpn/: socks5_bridge.rs
scripts/: build_image.sh  deploy_testnet.sh  run_emulator.sh  sign_release.sh
system_services/auth/: biometric.rs  identity_manager.rs  secure_enclave.rs
system_services/init/: dependency_graph.rs  init.rs  service_manager.rs
system_services/storage/: backup_engine.rs  encrypted_fs.rs  file_permissions.rs  journaling.rs
system_services/telemetry/: audit_pipeline.rs  privacy_controls.rs
system_services/updates/: rollback.rs  signature_verifier.rs  updater.rs
tests/: encryption_tests.rs  kernel_tests.rs  networking_tests.rs  sandbox_tests.rs  stress_tests.rs
tools/debugger/: Cargo.toml
tools/debugger/src/: breakpoints.rs  ipc_view.rs  kernel_logs.rs  main.rs  memory_view.rs  network_view.rs  performance.rs  process_view.rs  register_view.rs  stack_trace.rs
tools/emulator/: Cargo.toml
tools/emulator/src/: battery.rs  cpu.rs  display.rs  main.rs  memory.rs  modem.rs  network.rs  sensors.rs  storage.rs  touchscreen.rs  vm.rs
tools/flash_tool/: Cargo.toml
tools/flash_tool/src/: backup.rs  flash.rs  flashboot.rs  main.rs  partition.rs  recovery.rs  restore.rs  usb.rs  verification.rs
tools/packet_analyzer/: Cargo.toml
tools/packet_analyzer/src/: capture.rs  dns.rs  export.rs  filters.rs  ipv4.rs  ipv6.rs  main.rs  overlay.rs  statistics.rs  tcp.rs  udp.rs  vpn.rs
