[package]
name = "settings"
version = "0.1.0"
edition = "2021"
authors = ["OS Project"]
description = "System settings application"
license = "GPL 3"

[[bin]]
name = "settings"
path = "src/main.rs"

[dependencies]

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Internal OS crates
system_api = { path = "../../frameworks/system_api" }
system_services = { path = "../../system_services" }
hardware_abstraction = { path = "../../hardware_abstraction" }

[features]
default = []

developer_mode = []
advanced_networking = []
enterprise_features = []
