```toml
[package]
name = "secure_mobile_os_emulator"
version = "0.1.0"
edition = "2021"
authors = ["Secure Mobile OS Team"]
license = "GPL-3.0-only"
description = "Virtual emulator for Secure Mobile OS"

[dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
```
