```toml id="cargo001"
[package]
name = "packet_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Secure Mobile OS Team"]
license = "GPL-3.0-only"
description = "Packet analysis and inspection tools for Secure Mobile OS"

[dependencies]

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
```
